tests/negative/gold/incomplete-char-test.gold
tests/negative/incomplete-char-test.toit:6:3: error: Unterminated character
  '\
  ^~
Compilation failed
